feat: added be server canister config

--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,9 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "@dfinity/agent": "^2.0.0",
+    "@dfinity/candid": "^2.0.0",
+    "@dfinity/principal": "^2.0.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/html-pdf": "^3.0.3",
     "@types/jsonwebtoken": "^9.0.5",
