--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
     "dev": "TS_NODE_FILES=true nodemon -L",
     "start": "node dist/index.js",
     "build": "tsc && npm run copy-assets",
-    "copy-assets": "copyfiles -u 1 src/pdf/assets/**/* dist/"
+    "copy-assets": "copyfiles -u 1 dist/"
   },
   "keywords": [],
   "author": "",
