--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "rentmase",
   "version": "1.0.0",
   "description": "Rentmase",
-"scripts": {
-  "dev": "TS_NODE_FILES=true nodemon -L",
-  "start": "node dist/index.js",
-  "build": "tsc && pnpm run copy-assets",
-  "copy-assets": "copyfiles -u 1 dist/"
-},
+  "scripts": {
+    "dev": "TS_NODE_FILES=true nodemon -L",
+    "start": "node dist/index.js",
+    "build": "tsc && pnpm run copy-assets",
+    "copy-assets": "copyfiles -u 1 dist/"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -35,6 +35,7 @@
     "@types/socket.io": "^3.0.2",
     "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.3",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
